Refactorizado el codigo usando algunas funciones de JQuery

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
   <body>
     <div class="container"></div>
 
+    <!-- JQuery CDN -->
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+    <!-- My Own Script -->
     <script src="index.js"></script>
   </body>
 </html>
